WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216709
console APIs shouldn't crash making a string that's too long for a console warning when using user provided labels
https://bugs.webkit.org/show_bug.cgi?id=216709
Summary
console APIs shouldn't crash making a string that's too long for a console wa...
Saam Barati
Reported
2020-09-18 11:22:55 PDT
...
Attachments
patch
(7.86 KB, patch)
2020-09-18 11:40 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(8.60 KB, patch)
2020-09-18 12:04 PDT
,
Saam Barati
mark.lam
: review+
Details
Formatted Diff
Diff
patch for landing
(14.73 KB, patch)
2020-09-18 16:14 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-09-18 11:23:29 PDT
<
rdar://problem/68275357
>
Saam Barati
Comment 2
2020-09-18 11:40:40 PDT
Created
attachment 409154
[details]
patch
Saam Barati
Comment 3
2020-09-18 11:41:02 PDT
Comment on
attachment 409154
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409154&action=review
> LayoutTests/inspector/console/console-count-reset-oom.html:14 > + console.countReset('a'.repeat(2**31-1));
gonna try to write tests for all the places I changed.
Saam Barati
Comment 4
2020-09-18 12:04:44 PDT
Created
attachment 409158
[details]
patch
Mark Lam
Comment 5
2020-09-18 12:28:08 PDT
Comment on
attachment 409158
[details]
patch r=me
Devin Rousso
Comment 6
2020-09-18 13:57:47 PDT
Comment on
attachment 409158
[details]
patch r=me as well :) FYI this also could happen in - `JSGlobalObjectConsoleClient::profile` - `JSGlobalObjectConsoleClient::profileEnd` - `JSGlobalObjectInspectorController::reportAPIException` - `InspectorTimelineAgent::startFromConsole` - `InspectorTimelineAgent::stopFromConsole` - `WebConsoleAgent::didReceiveResponse` - `WebConsoleAgent::didFailLoading`
Saam Barati
Comment 7
2020-09-18 16:14:19 PDT
Created
attachment 409176
[details]
patch for landing
EWS
Comment 8
2020-09-18 17:27:11 PDT
Committed
r267301
: <
https://trac.webkit.org/changeset/267301
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409176
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug