console APIs shouldn't crash making a string that's too long for a console warning when using user provided labels https://bugs.webkit.org/show_bug.cgi?id=216709 <rdar://problem/68275357>

Reviewed by Mark Lam and Devin Rousso.

Source/JavaScriptCore:

Various console APIs send warnings when a label can't be found. These warnings
include the label itself. If this label has a long enough length, when we make
these warning strings, we can crash, because we exceed max string length.
This patch fixes this by truncating the label everywhere it's used if it
exceeds a length of 10000.

* inspector/JSGlobalObjectConsoleClient.cpp:
(Inspector::JSGlobalObjectConsoleClient::profile):
* inspector/ScriptArguments.h:
* inspector/agents/InspectorConsoleAgent.cpp:
(Inspector::InspectorConsoleAgent::startTiming):
(Inspector::InspectorConsoleAgent::logTiming):
(Inspector::InspectorConsoleAgent::stopTiming):
(Inspector::InspectorConsoleAgent::count):
(Inspector::InspectorConsoleAgent::countReset):

Source/WebCore:

Test: inspector/console/console-oom.html

* inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::startFromConsole):
(WebCore::InspectorTimelineAgent::stopFromConsole):
* inspector/agents/WebConsoleAgent.cpp:
(WebCore::WebConsoleAgent::didReceiveResponse):

LayoutTests:

* TestExpectations:
* inspector/console/console-oom-expected.txt: Added.
* inspector/console/console-oom.html: Added.


Canonical link: https://commits.webkit.org/229526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267301 268f45cc-cd09-0410-ab3c-d52691b4dbfc